# cognifytech-intern

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
cognifyztech_intern/: __init__.py  dataset.py  features.py  get_data.py  get_interim_data.py  plots.py
cognifyztech_intern/modeling/: predict.py  train.py
data/processed/: Dataset.csv  Processed.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: baseline.pkl  gradientboost.pkl
notebooks/: 01-cognifyztech-notebook.ipynb
references/: Data Dictioary.md
